# glux

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  debug_test.py  go.mod  lexer.py  llvm_generator.py  main.go  main.py  main_test.py  output.txt  parser.py  print_ast.py  run_ir.py  run_llvm_ir.py  test_llvm.py  test_runner.py  名稱.md  專案架構.md  設計稿.md  語言規範.md
examples/: chinese_hello.glux  chinese_test.glux  complex_test.glux  concurrency.glux  concurrency_test.glux  concurrent.glux  final_test.glux  hello.glux  main_test.glux  minimal.glux  simple.glux  simple_concurrency.glux  simple_string_test.glux  simple_test.glux  string_interpolation_test.glux  string_test.glux  struct.glux  temp_test.glux  template_hello.glux  template_simple.glux  template_test.glux  test.glux  test_interpolation.glux
internal/ast/: ast.go
internal/codegen/: codegen.go  codegen_expressions.go  codegen_statements.go  codegen_test.go
internal/lexer/: lexer.go
internal/parser/: parser.go  parser_expressions.go  parser_statements.go
internal/runtime/: runtime.go
internal/semantics/: semantics.go
internal/utils/: utils.go
src/: ast.rs  codegen.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  semantic.rs
src/builtin/: builtin.rs  mod.rs
src/glux/: __init__.py  main.py
src/keyword/: await_handler.rs  for_handler.rs  if_handler.rs  keyword.rs  keyword_registry.rs  match_handler.rs  mod.rs  return_handler.rs  spawn_handler.rs  while_handler.rs
test/: main.glux
tests/: test_semantic_analyzer.py  test_type_system.py
tests/examples/: minimal.glux  simple_test.glux  (+18 more)
(+52 files in other folders)
